# geolog

./: .eslintrc.yaml  .eslintrc.yml  .gitignore  DESCISIONS.md  Dockerrun.aws.json.template  PREFERENCES.md  README.md  TERRAFORM.md  circle.yml  compress-dependencies.sh  deploy.sh  extract-dependencies.sh  gulpfile.js  main.tf  package.json  wdio.conf.js
.modules/: aws-sdk-v2.6.7.tgz  concurrent-transform-v1.0.0.tgz  gulp-awspublish-v3.3.0.tgz  gulp-v3.9.1.tgz  promisify-node-v0.4.0.tgz  swagger-tools-v0.10.1.tgz
dependencies/: .bin.tgz  aws-sdk.tgz  concurrent-transform.tgz  del.tgz  gulp-awspublish.tgz  gulp-connect.tgz  gulp-coveralls.tgz  gulp-decompress.tgz  gulp-eslint.tgz  gulp-filter.tgz  gulp-htmlhint.tgz  gulp-mocha.tgz  gulp-rename.tgz  gulp-zip.tgz  gulp.tgz  merge-stream.tgz  promisify-node.tgz  swagger-tools.tgz  vinyl.tgz
lib/: apiGateway.js
src/: index.html
src/api/: schema.yaml  schema.yml
src/back/: Dockerfile  back.cabal  endpoint.js  endpoint.spec.js  index.js  index.spec.js
src/back-old/: index.js
src/back/src/: Lib.hs  client_session_key.aes
src/front/: .eslintrc.yaml  .eslintrc.yml  index.html
src/front/assets/: api.js  apigClientFactory.js  app.js  app.jsx  config.js  file_button.jsx
src/infrastructure/: assets-geolog-co-bucket.tf  aws_api_gateway_domain_name.tf  aws_api_gateway_rest_api.geolog-api.tf  aws_cognito.tf  aws_ecs.tf  aws_elasticbeanstalk_geolog.tf  aws_iam_user.geolog_ci.tf  aws_iam_user.geolog_ci_master.tf  aws_lambda_function.geolog.tf  aws_route53_zone.geolog-co.tf  aws_s3_bucket.assets-geolog-co.tf  aws_s3_bucket.blue_geolog.co.tf  aws_s3_bucket.green_geolog.co.tf  aws_s3_bucket.uploads_geolog.co.tf  main.tf
src/test/: .eslintrc.yaml  test.spec.js
(+18 files in other folders)
