name:                back
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/back#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5,
                       yesod == 1.4.5,
                       warp == 3.2.13,
                       wai == 3.2.1.1,
                       aeson == 1.1.2.0,
                       bytestring == 0.10.8.1,
                       conduit == 1.2.12,
                       conduit-extra == 1.1.17,
                       lifted-base == 0.2.3.11,
                       http-types == 0.9.1,
                       wai-conduit == 3.0.0.3,
                       text == 1.2.2.2
  default-language:    Haskell2010

executable back-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , back
  default-language:    Haskell2010

test-suite back-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , back
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/back
